--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hacker-news-grahpql",
+  "name": "hacker-news-graphql",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
