--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "deploy": "prisma deploy --env-file .env"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "dotenv": "8.0.0",
     "graphql-yoga": "1.18.0",
     "jsonwebtoken": "8.5.1",
     "prisma-client-lib": "1.34.0"
